<resources>
    <string name="app_name">Shopping List</string>
    <string name="shortcut_name">Your lists</string>

    <string name="add_a_new_shopping_list">Add a new shopping list</string>
    <string name="save_shopping_list_with_current_name">Save shopping list with current name</string>
    <string name="enter_name_of_the_shopping_list">Enter name of the shopping list</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_cost">Enter cost</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_shopping_list">Delete \"%1$s\"?</string>
    <string name="are_you_sure_you_want_to_delete_this_shopping_list">Are you sure you want to delete this shopping list?</string>
    <string name="delete_product">Delete product?</string>
    <string name="you_are_sure_you_want_to_delete_this_product">You are sure you want to delete this product?</string>
    <string name="are_you_forgot">Are you forgot?</string>
    <string name="add_selected_products">Add selected products</string>
    <string name="no_thanks">No, thanks</string>
    <string name="estimated_amount">Estimated amount = %1$s</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="total">total</string>
    <string name="quantity_and_weight">quantity(pieces or kg)</string>
    <string name="accept">accept</string>
    <string name="delete">delete</string>
    <string name="close">close</string>
    <string name="add_product">add product</string>
    <string name="update_product">update product</string>
    <string name="update_shopping_list">update shopping list</string>
    <string name="you_did_not_select_anything">You did not select anything</string>
    <string name="database_date_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="needed_date_format" translatable="false">dd.MM.yyyy   HH:mm:ss</string>
    <string name="main_screen_logo" translatable="false">main screen logo</string>
    <string name="main_screen_background" translatable="false">main screen background</string>
    <string name="lists">Lists</string>
    <string name="all_products">All products</string>
    <string name="scan_btn" translatable="false">Scan</string>
    <string name="ok_btn">OK</string>
    <string name="hint_choice_activity_name" translatable="false">Choose item under</string>
    <string name="hint_choice_activity_cost" translatable="false">Cost</string>
    <string name="choose_lang_title">Choose your language</string>
    <string name="rus_tessdata">Русский</string>
    <string name="eng_tessdata">English</string>
    <string name="go_to_shop">Go To Shop!</string>
    <string name="done">Done!</string>
    <string name="scan_item_button" translatable="false">Scan item</string>
    <string name="print_item_button" translatable="false">Print item</string>
    <string name="scan">scan</string>
    <string name="type">type</string>

    <string name="potatoes">potatoes</string>
    <string name="cabbage">cabbage</string>
    <string name="carrot">carrot</string>
    <string name="tomatoes">tomatoes</string>
    <string name="cucumbers">cucumbers</string>
    <string name="garlic">garlic</string>
    <string name="onion">onion</string>
    <string name="beetroot">beetroot</string>
    <string name="apples">apples</string>
    <string name="bananas">bananas</string>
    <string name="oranges">oranges</string>
    <string name="lemons">lemons</string>
    <string name="butter">butter</string>
    <string name="olive_oil">olive oil</string>
    <string name="sunflower_oil">sunflower oil</string>
    <string name="milk">milk</string>
    <string name="fish">fish</string>
    <string name="peas">peas</string>
    <string name="corn">corn</string>
    <string name="mushrooms">mushrooms</string>
    <string name="chicken_meat">chicken_meat</string>
    <string name="pork">pork</string>
    <string name="beef">beef</string>
    <string name="spaghetti">spaghetti</string>
    <string name="rice">rice</string>
    <string name="buckwheat">buckwheat</string>
    <string name="mustard">mustard</string>
    <string name="eggs">eggs</string>
    <string name="sugar">sugar</string>
    <string name="salt">salt</string>
    <string name="coffee">coffee</string>
    <string name="black_tea">black tea</string>
    <string name="green_tea">green tea</string>
    <string name="red_tea">red tea</string>
    <string name="cocoa">cocoa</string>
    <string name="dish_soap">dish soap</string>
    <string name="white_bread">white bread</string>
    <string name="bread">bread</string>
    <string name="juice">juice</string>
    <string name="cheese">cheese</string>
    <string name="sour_cream">sour cream</string>
    <string name="ketchup">ketchup</string>
    <string name="mayonnaise">mayonnaise</string>
    <string name="garbage_bag">garbage bag</string>
    <string name="gum">gum</string>
    <string name="flour">flour</string>
    <string name="honey">honey</string>
    <string name="vinegar">vinegar</string>
    <string name="margarine">margarine</string>
    <string name="soda">soda</string>
    <string name="bay_leaf">bay leaf</string>
    <string name="radish">radish</string>
    <string name="tomato_paste">tomato paste</string>
    <string name="condensed_milk">condensed milk</string>
    <string name="chocolate">chocolate</string>
    <string name="foil_for_baking">foil for baking</string>
    <string name="nuts">nuts</string>
    <string name="beans">beans</string>
    <string name="dried_fruits">dried fruits</string>
    <string name="yogurt">yogurt</string>
    <string name="cookie">cookie</string>
    <string name="toilet_paper">toilet paper</string>
    <string name="pita">pita</string>
    <string name="waffles">waffles</string>
    <string name="ice_cream">ice cream</string>
    <string name="smoked_sausage">smoked sausage</string>
    <string name="sausage">sausage</string>
    <string name="pate">pate</string>
    <string name="spice">spice</string>
    <string name="chips">chips</string>
    <string name="muesli">muesli</string>
    <string name="marshmallows">marshmallows</string>
    <string name="marmalade">marmalade</string>
    <string name="dumplings">dumplings</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Closed</string>
    <string name="profit">Profit</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="sort_by_alphabet">sort by alphabet</string>
    <string name="sort_by_date">sort by date</string>
    <string name="date_of_creation">date of creation</string>
    <string name="edit_shopping_list">Edit shopping list</string>
    <string name="edit_product">Edit product</string>
    <string name="popularity">popularity</string>
    <string name="ask_delete_product_from_database">Do you really want to permanently delete this product from anywhere?</string>
    <string name="ask_delete_product">Delete \"%1$s\"?</string>
    <string name="ask_update_product_from_database">Do you really want to update this product from anywhere?</string>
    <string name="ask_update_shopping_list_from_database">Do you really want to update this shopping list?</string>
    <string name="ask_update_product">Update \"%1$s\"?</string>
    <string name="enter_name_and_cost">Enter name and cost</string>
    <string name="please_enter_all_data">Please, enter all data!</string>
    <string name="please_enter_name">Please, enter name!</string>
    <string name="ask_update_shopping_list">Update \"%1$s\"?</string>
    <string name="add_new_product">Add new product</string>
    <string name="ask_close_app">Are you sure you want to close \"%1$s\"?</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="weight">Weight</string>
    <string name="weight_profit">Weight/Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="add_best">Add best</string>
    <string name="clear">Clear</string>
    <string name="choose_your_colors_and_gradients">Choose app style:</string>
    <string name="sum">Sum</string>
    <string name="recognize_speech">Please ,select a language for recognition.</string>
    <string name="download_error">Download error: </string>
    <string name="file_downloaded">File downloaded</string>
    <string name="lang_downloading">Recognize language downloading.</string>
    <string name="download_starts">Download starts.</string>
    <string name="auth_filed">Auth filed.</string>
    <string name="number_of_products">number_of_products</string>
    <string name="compare">Compare</string>
    <string name="product_with_name_exists">Product with current name already exists!</string>
    <string name="kg">kg</string>
    <string name="unit">unit</string>
    <string name="tv_quantity" translatable="false">%1$s %2$s</string>
    <string name="pieces">pieces</string>
    <string name="product_name_exists">Product \"%1$s\" already exists!</string>
    <string name="product_name_exists_in_list">Product \"%1$s\" already exists in this list!</string>
    <string name="statistics">Statistics</string>
    <string name="current_month">Current month</string>
    <string name="half_year">Half-year</string>
    <string name="year">Year</string>
    <string name="date_picker_dialog_second_date">Select the second date.</string>
    <string name="cancel">Cancel</string>
    <string name="show">Show</string>
    <string name="date_picker_dialog_first_date">Select the first date.</string>
    <string name="about_us">About us</string>
    <string name="fokin_email" translatable="false"><u>zanuda.lidchanin@gmail.com</u></string>
    <string name="alexei">Alexei</string>
    <string name="sinukovich_email" translatable="false"><u>Gldestroyed@gmail.com</u></string>
    <string name="alexander">Alexander</string>
    <string name="company_email" translatable="false"><u>SimpleButComfortableSBC@gmail.com</u></string>
    <string name="contact_us_full_text">
        \tContact us if:
        \n1) you see any mistakes 😣
        \n2) you know how to improve the application 😎
        \n3) you are simply bored 😀
        \n\nWe will always be happy to help and just talk.
    </string>
    <string name="developed_by">Developed by</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="send">Send</string>
    <string name="choose_an_email_client">Choose an Email client :</string>
    <string name="write_message">Write message</string>
    <string name="other">Other</string>
    <string name="alternate_date">Alternate date</string>
    <string name="alternate">Alternate</string>
    <string name="free">Free</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="red_soft">Red Soft</string>
    <string name="bright">Bright</string>
    <string name="material">Material</string>
    <string name="dark">Dark</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="tutorial_screen_first">In app\s part, named as "Lists", you can add or edit each of your shopping lists. For each item, you can enter cost, quantity\weight and name, to get correct final sum.</string>
    <string name="tutorial_screen_second">In this part of app, you can change your app\'s theme, on which you want.</string>
    <string name="tutorial_screen_third">In this part of app, you can see products, from deleted lists, which was marked as bought.</string>
</resources>