<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_existing_products"
            android:icon="@drawable/ic_format_list_black_24dp"
            android:title="@string/all_products" />
        <item
            android:visible="false"
            android:id="@+id/nav_profit"
            android:icon="@drawable/ic_profit_black_24dp"
            android:title="@string/profit" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>