<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_in_child_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/inside_recycler"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_existence_in_child_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp" />

            <TextView
                android:id="@+id/tv_cost_in_child_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cost"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_total_cost_in_child_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:text="@string/sum"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/button_delete_in_child_rv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/icons_background"
                android:contentDescription="@string/delete_shopping_list"
                android:src="@drawable/ic_clear_black_24dp" />

            <TextView
                android:id="@+id/tv_name_in_child_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_quantity_in_child_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/quantity_and_weight"
                android:text="@string/quantity"
                android:textSize="16sp" />

        </FrameLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>