<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundTheme"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/about_us"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_contact_in_about_us_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/developed_by"
            android:textColor="?attr/textColorOnBackground"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_company_email_in_about_us_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/company_email"
                android:textColor="?attr/textColorOnBackground"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_contact_full_in_about_us_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/contact_us_full_text"
        android:textColor="?attr/textColorOnBackground"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000"
                android:contentDescription="@string/about_us"
                android:src="@drawable/ic_accessible_black_24dp" />

            <TextView
                android:id="@+id/tv_sin_email_in_about_us_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sinukovich_email"
                android:textColor="?attr/textColorOnBackground"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000"
                android:contentDescription="@string/about_us"
                android:src="@drawable/ic_accessible_black_24dp" />

            <TextView
                android:id="@+id/tv_fok_email_in_about_us_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/fokin_email"
                android:textColor="?attr/textColorOnBackground"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>