<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_in_main_rv"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:background="@drawable/inside_recycler"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_centerVertical="true"
                android:id="@+id/button_edit_in_main_rv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/edit_shopping_list"
                android:src="@drawable/ic_mode_edit_black_24dp" />

            <TextView
                android:layout_toRightOf="@+id/button_edit_in_main_rv"
                android:textColor="@color/white"
                android:id="@+id/tv_name_in_main_rv"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/name" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_date_in_main_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_creation" />

            <ImageButton
                android:layout_centerVertical="true"
                android:id="@+id/button_delete_in_main_rv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/delete_shopping_list"
                android:src="@drawable/ic_clear_24dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="54dp"
            android:id="@+id/main_screen_child_rv"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <TextView
            android:gravity="center"
            android:textColor="@color/blueDark"
            android:layout_below="@id/main_screen_child_rv"
            android:id="@+id/tv_estimated_sum"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:visibility="gone" />

        <Button
            android:textSize="16sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_add_white_24dp"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:background="@drawable/inside_recycler"
            android:layout_below="@id/tv_estimated_sum"
            android:id="@+id/main_screen_child_add_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_product"
            android:visibility="gone" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>