<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundTheme">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_show_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/rect_buttons_main_nrc_left"
            android:maxHeight="48dp"
            android:text="@string/current_month" />

        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:background="?attr/colorAccent" />

        <Button
            android:id="@+id/button_show_half_year"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rect_buttons_main_nrc"
            android:maxHeight="48dp"
            android:text="@string/half_year" />

        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:background="?attr/colorAccent" />

        <Button
            android:id="@+id/button_show_year"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rect_buttons_main_nrc"
            android:maxHeight="48dp"
            android:text="@string/year" />

        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:background="?attr/colorAccent" />

        <Button
            android:id="@+id/button_show_alternate"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/rect_buttons_main_nrc_right"
            android:text="@string/alternate" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/statistics_main_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>