<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_in_main_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_edit_in_main_rv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/edit_shopping_list"
                android:src="@drawable/ic_mode_edit_black_24dp" />

            <TextView
                android:id="@+id/tv_name_in_main_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/button_edit_in_main_rv"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_date_in_main_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_creation"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_delete_in_main_rv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/delete_shopping_list"
                android:src="@drawable/ic_clear_24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_screen_child_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="54dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_estimated_sum"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/main_screen_child_rv"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <Button
                android:id="@+id/main_screen_child_add_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_estimated_sum"
                android:background="@drawable/inside_recycler"
                android:drawableLeft="@drawable/ic_add_white_24dp"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/add_product"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>